--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     ports:
       - '3306:3306'
     env_file: .env
+    volumes:
+      - data_volume:/var/lib/mysql
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -17,3 +19,5 @@ services:
       - "3000:3000"
     depends_on:
       - db
+volumes:
+  data_volume:
