add form models and remove a lot of old stuff

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,15 @@
-inherit_from:
-  - .rubocop_todo.yml
+---
+Style/FrozenStringLiteralComment:
+  Enabled: false
+Style/Documentation:
+  Enabled: false
+Style/RedundantSelf:
+  Enabled: false
+Layout/EmptyLineAfterGuardClause:
+  Enabled: false
+Metrics/AbcSize:
+  Enabled: false
+Metrics/MethodLength:
+  Enabled: false
+Metrics/LineLength:
+  Enabled: false
