--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
+    "rails-ujs": "^5.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
