--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
     "@rails/webpacker": "^4.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.3.1",
-    "jquery": "^3.4.0",
+    "jquery": "^3.4.1",
+    "jquery-ujs": "^1.2.2",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "rails-ujs": "^5.2.3",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
