update the default tag to pull the right image for v3

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ REGISTRY_HOST=registry.gitlab.com
 REGISTRY_URI=/notch8/reumanager
 SITE_URI=https://reumanager.com
 DEPLOY_HOOK=TODO
-TAG=dev
+TAG=v3
 VIRTUAL_PORT=80
 VIRTUAL_HOST=reumanager.docker,web.reumanager.docker,uc.reumanager.docker
 PASSENGER_APP_ENV=development
