--- a/config/snippets.yml
+++ b/config/snippets.yml
@@ -1,44 +1,64 @@
 general_description:
-  name: General Description
+  name: general_description
   description: This is the text used as a general description for your program.
     It is displayed on the front page under the main image.
-  value:  Example-
-
-    In the Engineering Center For Diabetes Research and Education (ECDRE) researchers at the State Institute of Technology (SIT) collaborate with basic scientists and clinicians applying engineering techniques towards the understanding and treatment of diabetes and its complications. The Biomedical Engineering Department at SIT and ECDRE provides the foundation for this 10-week summer program. Students will be paired with faculty to complete a diabetes related research project working with a faculty mentor from SIT. Diabetes is a complex disease that can lead to a number of health complications. The projects offered in this program reflect this diversity, with topics in biomaterials for islet cell encapsulation, models of glucose metabolism, imaging techniques for prognosis/diagnosis of disease, regeneration strategies for the treatment of ulcers and ischemic limbs and vascular changes in diabetic retinopathy.
+  value: |
+    <p>The mission of Cal-Bridge is to increase the number of California State University (CSU) students completing their bachelor's degree and successfully entering a PhD program to study physics, astronomy, or a closely related field. Applicants will be evaluated for admission into Cal-Bridge based on their academic ability, potential, motivation to attend graduate school, and financial need. Students admitted to the program will become "Cal-Bridge Scholars".</p>
 
 highlights:
-  name: Program Highlights
+  name: highlights
   description: ''
-  value: Example-
-
-     Wide variety of research topics
-     Weekly seminars
-     Research ethics
-     Social programs
-     Outreach and mentoring of K-12 educational program
+  value: |
+    <ul>
+      <li>Full scholarship* support for the final two years at a <a href="https://www.cpp.edu/~sci/physics-astronomy/research/cal-bridge.shtml#participating-csu">participating CSU</a>, based on demonstrated need</li>
+      <li>An additional year of scholarship funding to help cover first-year cost of graduate school at a participating UC campus**</li>
+      <li>Mentoring from CSU and UC faculty team</li>
+      <li>Participation in professional development workshops geared toward success in completing undergraduate degree and entering graduate school</li>
+      <li>Opportunities to participate in research with CSU and UC faculty</li>
+      <li>Participation in STEM enrichment activities in a nurturing, friendly environment with other like-minded young scholars from across the CSU and UC systems</li>
+    </ul>
+    <p>*Note that admission into Cal-Bridge does not guarantee admission to a UC graduate program; Cal-Bridge scholars must successfully apply and matriculate to a participating UC graduate program in order to receive financial support for the first year of (UC) graduate study.</p>
+    <p>**Selected Cal-Bridge scholars attending a participating CSU will receive full scholarship support for up to their last two years of attendance at their home institution, to the extent allowed by their demonstrated financial need as determined by the financial aid office at their home institution.</p>
 
 eligibility_requirements:
-  name: Eligibility Requirements
+  name: eligibility_requirements
   description: ''
-  value: Example-
-
-      Students should have a declared engineering or science (biology, chemistry, mathematics, computer science, or physics) major.
-      Students should have a minimum GPA of 2.80/4.00.
-      Applicants must be US citizens or permanent residents.
-      Students from community colleges are encouraged to apply.
+  value: |
+    <p>To be eligible for Cal-Bridge, an applicant must be:</p>
+    <ul>
+      <li>Currently enrolled in a participating CSU or currently enrolled in a participating community college and expecting to transfer to a participating CSU in the coming Fall (see <a href="https://www.cpp.edu/~sci/physics-astronomy/research/cal-bridge.shtml#participating">Participating Schools</a> for a complete list). Acceptance to Cal-Bridge is contingent on acceptance and enrollment to a participating CSU by the Fall of the Cal-Bridge application year.</li>
+      <li>Majoring in physics or astronomy</li>
+      <li>Enrolled in 2nd and 3rd year physics classes</li>
+      <li>Demonstrating academic ability and potential</li>
+      <li>Motivated to attend graduate school to study physics, astronomy or related fields at a participating UC or another institution</li>
+    </ul>
 
 application_information:
-  name: Application Information
+  name: application_information
   description: ''
-  value: Example-
-
-      Academic Transcript
-      Letters of recommendation
-      Two essays to the application form. The essays should be no longer than one page in length, single spaced, and font no less than 10 pt. A) What are you future academic/career goals? Explain how participation in this REU program will help you achieve those goals. B) Describe an activity (hobby, sport, club, service, etc.) you enjoy outside of classes. Discuss how you got involved and what it requires from you.
+  value: |
+    <ul>
+      <li>Please fill out the application questions with your name and contact information (address/cell phone/preferred email)</li>
+      <li>Contact information of two (2) faculty members who will provide recommendation letters.</li>
+      <li>Academic information (major, overall GPA, etc.)</li>
+      <li>Undergraduate transcripts (unofficial transcripts accepted)</li>
+      <li>Three short essays (250-500 words each)</li>
+      <li>The two (20 faculty members providing letters for you must upload their letters themselves.</li>
+      <li>Please <strong>do not</strong> upload password-protected documents</li>
+    </ul>
+    <p>Note: Only U.S. citizens or permanent residents are eligible to receive financial aid, but non-citizens selected to be Cal-Bridge scholars may receive all the other benefits of the program. In addition, sometimes private donations make it possible to give financial aid to non-citizens, and all eligible students are encouraged to apply.</p>
 
 acknowledgment_of_funding_soruces:
-  name: Acknowledgment Of Funding Soruces
+  name: acknowledgment_of_funding_soruces
   description: Please provide text to be included on the site as acknowledgment of program funding. In addition (or instead) you may send an image of the funding agency logo.
-  value: Example-
+  value: |
+    <p>The Cal-Bridge program is supported by the National Science Foundation under an S-STEM Grant No. DUE-1356133.</p>
 
-      This program is supported by the National Science Foundation (EEC-1461215).
+submit_application_heading:
+  name: submit_application_heading
+  description: ''
+  value: |
+  
+ready_to_submit_message:
+  name: ready_to_submit_message
+  description: ''
