--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,5 +11,7 @@ Metrics/AbcSize:
   Enabled: false
 Metrics/MethodLength:
   Enabled: false
+Metrics/BlockLength:
+  Enabled: false
 Metrics/LineLength:
   Enabled: false
