--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rails-ujs": "^5.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-jsonschema-form": "^1.7.0",
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
