--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
     "jquery-ujs": "^1.2.2",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
