--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,8 @@ Layout/EmptyLineAfterGuardClause:
   Enabled: false
 Metrics/AbcSize:
   Enabled: false
+Metrics/ClassLength:
+  Enabled: false
 Metrics/MethodLength:
   Enabled: false
 Metrics/BlockLength:
