--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-plugin-react": "^7.14.3",
     "webpack-dev-server": "^3.2.1"
   }
 }
