remove unused js and css, update everything to bootstrap 4, remove need for webpack container

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,6 +6,7 @@ globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
   $: true
+parser: babel-eslint
 parserOptions:
   ecmaFeatures:
     jsx: true
