--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-jsonschema-form": "^1.7.0",
+    "react-jsonschema-form-bs4": "^1.7.1",
+    "react-jsonschema-form-theme-bs4": "^1.0.0",
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.2.1",
     "eslint-plugin-react": "^7.14.3",
     "webpack-dev-server": "^3.2.1"
   }
