--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,3 +1,4 @@
+---
 env:
   browser: true
   es6: true
@@ -14,4 +15,6 @@ parserOptions:
   sourceType: module
 plugins:
   - react
-rules: {}
+rules:
+  "react/jsx-uses-react": "error"
+  "react/jsx-uses-vars": "error"
