--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.3.1",
     "core-js": "3",
+    "deep-equal": "^1.1.0",
     "flatpickr": "^4.6.2",
     "jquery": "^3.4.1",
     "jquery-ujs": "^1.2.2",
