--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.3.1",
     "core-js": "3",
@@ -18,6 +20,8 @@
     "react-jsonschema-form": "^1.7.0",
     "react-jsonschema-form-bs4": "^1.7.1",
     "react-jsonschema-form-theme-bs4": "^1.0.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
