--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ VIRTUAL_PORT=80
 VIRTUAL_HOST=reumanager.docker,web.reumanager.docker,uc.reumanager.docker
 PASSENGER_APP_ENV=development
 CORS_ENABLED=true
+STRIPE_SECRET_KEY=sk_test_xp6wrmUz73aXUdQb7XDZm7mt
+STRIPE_PUBLISHABLE_KEY=pk_test_p7UXZiQWomIICnrBTZna13sH
