--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - 'postgres:/var/lib/postgresql/data'
   web:
-    build: .
+    # build: .
     image: "${REGISTRY_HOST}${REGISTRY_URI}/${TAG}"
     command: bash -c "bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
