first pass at chart deploy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,48 +1,49 @@
-image: $CI_REGISTRY_IMAGE/builder:latest
-services:
-  - docker:dind
-  - postgres:latest
-
 stages:
-  - build
-  - test
-  - review
-  - staging
-  - production
-
-variables:
-  POSTGRES_DB: reumanager
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: password
-  POSTGRES_HOST: postgres
-  TEST_DB: reumanager
-  DOCKER_DRIVER: overlay
-  REGISTRY_HOST: registry.gitlab.com
-  REGISTRY_URI: TODO/reumanager
-  SITE_URI_BASE: TODO
-
+- build
+- test
+- deploy
 
 before_script:
-  - export REGISTRY_FULL=registry.gitlab.com/notch8/ror-site/$CI_COMMIT_REF_SLUG:${CI_COMMIT_SHA:0:8}
-  - export TAG=$CI_COMMIT_REF_SLUG
-  - eval $(ssh-agent -s)
-  - bash
-  - ssh-add <(echo "$SSH_PRIVATE_KEY") 
-  - mkdir -p ~/.ssh
-  - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+- export TAG=${CI_COMMIT_SHORT_SHA}
+- export BRANCH=${CI_COMMIT_REF_NAME}
+- export REGISTRY_HOST=${CI_REGISTRY}
+- export REGISTRY_URI="/${CI_PROJECT_PATH}"
+
+base:
+  stage: build
+  script:
+    - docker login -u "gitlab-ci-token" -p "$CI_JOB_TOKEN" $CI_REGISTRY
+    - sc build -s base
+    - sc push -s base
+  when: manual
+  tags:
+    - local
 
 build:
   stage: build
   script:
-    - docker login -u "gitlab-ci-token" -p "$CI_BUILD_TOKEN" $CI_REGISTRY
+    - docker login -u "gitlab-ci-token" -p "$CI_JOB_TOKEN" $CI_REGISTRY
     - sc build
     - sc push
+    - docker tag $CI_REGISTRY_IMAGE:$TAG $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
   tags:
-    - docker
+    - local
+
 
 test:
   stage: test
-  image: $CI_REGISTRY_IMAGE:$CI_PROJECT_NAME-$CI_BUILD_REF_SLUG
+  image: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
+  services:
+        - name: postgres:11.1
+                        
+  variables:
+      POSTGRES_DB: reumanager
+    POSTGRES_USER: postgres
+    POSTGRES_PASSWORD: password
+    POSTGRES_HOST: postgres
+        TEST_DB: reumanager
+    SITE_URI_BASE: TODO
   script:
     - cd /home/app/webapp && bundle exec rake db:create db:schema:load spec
   tags:
@@ -54,7 +55,7 @@ review:
   stage: review
   type: deploy
   environment:
-    name: $CI_PROJECT_NAME-$CI_COMMIT_REF_SLUG
+    name: $CI_COMMIT_REF_SLUG
     url: http://web.$CI_PROJECT_NAME-$CI_COMMIT_REF_SLUG.staging.$SITE_URI_BASE
     on_stop: stop_review
   only:
@@ -62,18 +63,14 @@ review:
   except:
     - master
   script:
-    - export RANCHER_ENVIRONMENT=staging
-    - sc provision ci
-
+    - ./chart/bin/deploy review $CI_COMMIT_REF_SLUG
  tags:
-    - docker
-    - mysql
+    - local
 
 stop_review:
   stage: review
   script:
-    - export RANCHER_ENVIRONMENT=staging
-    - rancher rm $CI_PROJECT_NAME-$CI_BUILD_REF_SLUG
+    - ./chart/bin/remove review $CI_COMMIT_REF_SLUG
 
   when: manual
   environment:
@@ -84,19 +81,19 @@ staging:
   stage: staging
   type: deploy
   script:
-    - sc deploy staging 
+  - ./chart/bin/deploy staging $CI_COMMIT_REF_SLUG
   only:
     - master
   tags:
-    - docker
+    - local
 
 production:
   stage: production
   type: deploy
   script:
-    - sc deploy production
+  - ./chart/bin/deploy production $CI_COMMIT_REF_SLUG
   when: manual
   only:
     - master
   tags:
-    - docker
+    - local
