--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,11 @@
-.ruby-version
-.ruby-gemset
 .bundle
 .convox
 .env
+.env.*
 .git
+.ruby-*
 db/*.sqlite3
 db/*.sqlite3-journal
 log/*
+node_modules
 tmp
-.env.*
