--- a/.env
+++ b/.env
@@ -1,16 +1,14 @@
-POSTGRES_DB=reumanager
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=DatabaseFTW
-POSTGRES_HOST=postgres
-TEST_DB=reumanager_test
-REGISTRY_HOST=registry.gitlab.com
-REGISTRY_URI=/notch8/reumanager
-SITE_URI=https://reumanager.com
-DEPLOY_HOOK=TODO
-TAG=v3
-VIRTUAL_PORT=80
-VIRTUAL_HOST=reumanager.docker,web.reumanager.docker,uc.reumanager.docker
-PASSENGER_APP_ENV=development
+APP_NAME=reumanager
 CORS_ENABLED=true
-STRIPE_SECRET_KEY=sk_test_xp6wrmUz73aXUdQb7XDZm7mt
+DATABASE_ADAPTER=postgresql
+DATABASE_HOST=postgres
+DATABASE_NAME=reumanager
+DATABASE_PASSWORD=DatabaseFTW
+DATABASE_USER=postgres
+PASSENGER_APP_ENV=development
+REGISTRY_HOST=registry.gitlab.com
+REGISTRY_URI=/notch8/reumanager/v3
 STRIPE_PUBLISHABLE_KEY=pk_test_p7UXZiQWomIICnrBTZna13sH
+STRIPE_SECRET_KEY=sk_test_xp6wrmUz73aXUdQb7XDZm7mt
+TAG=v3
+TEST_DB=reumanager_test
