--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,13 @@
 # Hi - please dont edit this file directly, instead make changes in your .env file
 
 login: &login
-  adapter: postgresql
-  host: <%= ENV['POSTGRES_HOST'] %>
-  username: <%= ENV['POSTGRES_USER'] %>
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
-  database: <%= ENV['POSTGRES_DB'] %>
+  adapter: <%= ENV['DATABASE_ADAPTER'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
+  username: <%= ENV['DATABASE_USER'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  database: <%= ENV['DATABASE_NAME'] %>
+  pool: 5
+  timeout: 5000
 
 
 development:
