try to get test to run

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ test:
     TEST_DB: reumanager
     SITE_URI_BASE: TODO
   script:
-    - cd /home/app/webapp && bundle exec rake db:create db:schema:load spec
+    - bundle exec rake db:create db:schema:load spec
   tags:
     - docker
   variables:
