--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       - .env
       - .env.development
     volumes:
-      - .:/home/app/webapp:cached
-      - node_modules:/home/app/webapp/node_modules
-      - tmp_cache:/home/app/webapp/tmp/cache
+      - .:/app:cached
+      - node_modules:/app/node_modules
+      - tmp_cache:/app/tmp/cache
     # Keep the stdin open, so we can attach to our app container's process
     # and do things such as byebug, etc:
     stdin_open: true
