more work on getting tests run

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,9 @@ test:
     TEST_DB: reumanager
     SITE_URI_BASE: TODO
   script:
-    - bundle exec rake db:create db:schema:load spec
+    - ls -l
+    - cd /app && rails db:create db:schema:load
+    - cd /app && rspec
   tags:
     - docker
   variables:
