Mailtrap settings are in the ENV, set up for staging

--- a/.env
+++ b/.env
@@ -9,7 +9,10 @@ PASSENGER_APP_ENV=development
 REGISTRY_HOST=registry.gitlab.com
 REGISTRY_URI=/notch8/reumanager/v3
 STRIPE_PUBLISHABLE_KEY=pk_test_p7UXZiQWomIICnrBTZna13sH
-SENTRY_DSN=https://dec9e17721ed4d8f8cef0642dd1b9c90:ff3bcc7b3c2b4bc88fa713fb8a310b13@sentry.notch8.com/54
+# SENTRY_DSN=https://dec9e17721ed4d8f8cef0642dd1b9c90:ff3bcc7b3c2b4bc88fa713fb8a310b13@sentry.notch8.com/54
 STRIPE_SECRET_KEY=sk_test_xp6wrmUz73aXUdQb7XDZm7mt
 TAG=v3
 TEST_DB=reumanager_test
+MAILTRAP_USER=133465770985d17a2
+MAILTRAP_PASS=3a16df65e72986
+MAIL_HOST=reumanager.docker
