brings prod mail setup more in line with dev

--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@ STRIPE_PUBLISHABLE_KEY=pk_test_p7UXZiQWomIICnrBTZna13sH
 STRIPE_SECRET_KEY=sk_test_xp6wrmUz73aXUdQb7XDZm7mt
 TAG=v3
 TEST_DB=reumanager_test
-MAILTRAP_USER=133465770985d17a2
-MAILTRAP_PASS=3a16df65e72986
+MAIL_USER=133465770985d17a2
+MAIL_PASS=3a16df65e72986
 MAIL_HOST=reumanager.docker
+MAIL_ADDRESS=smtp.mailtrap.io
+MAIL_DOMAIN=smtp.mailtrap.io
