--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,6 +59,7 @@ production:
   stage: deploy
   type: deploy
   script:
+    - export KUBECONFIG=$KUBECONFIG_PALS
     - keybase oneshot
     - ./chart/bin/decrypt production
     - ./chart/bin/deploy production $CI_COMMIT_SHORT_SHA
