--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ amazon:
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
   region: us-west-2
-  bucket: reu-manager-v3-staging
+  bucket: <%= ENV['AWS_S3_BUCKET'] %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
