better login protections

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,11 +46,12 @@ staging:
   stage: deploy
   type: deploy
   script:
-    - keybase oneshot
+    -  keybase status | grep "Logged in:     no" && keybase oneshot
     - ./chart/bin/decrypt staging
     - ./chart/bin/deploy staging $CI_COMMIT_SHORT_SHA
   after_script:
     - rm ./chart/*-values.yaml
+    - keybase logout
   when: manual
   tags:
     - local
@@ -60,11 +61,12 @@ production:
   type: deploy
   script:
     - export KUBECONFIG=$KUBECONFIG_PALS
-    - keybase oneshot
+    -  keybase status | grep "Logged in:     no" && keybase oneshot
     - ./chart/bin/decrypt production
     - ./chart/bin/deploy production $CI_COMMIT_SHORT_SHA
   after_script:
     - rm ./chart/*-values.yaml
+    - keybase logout
   when: manual
   tags:
     - local
