--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ staging:
     - ./chart/bin/decrypt staging
     - ./chart/bin/deploy staging $CI_COMMIT_SHORT_SHA
   after_script:
-    - rm ./chart/*-values.yaml
+    - rm -f ./chart/*-values.yaml
     - keybase logout
   when: manual
   tags:
@@ -65,7 +65,7 @@ production:
     - ./chart/bin/decrypt production
     - ./chart/bin/deploy production $CI_COMMIT_SHORT_SHA
   after_script:
-    - rm ./chart/*-values.yaml
+    - rm -f ./chart/*-values.yaml
     - keybase logout
   when: manual
   tags:
