--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,11 +1,18 @@
 ---
+# Style
 Style/FrozenStringLiteralComment:
   Enabled: false
 Style/Documentation:
   Enabled: false
 Style/RedundantSelf:
   Enabled: false
+
+# Layout
 Layout/EmptyLineAfterGuardClause:
+  Enabled: false
+
+# Metrics
+Metrics/CyclomaticComplexity:
   Enabled: false
 Metrics/AbcSize:
   Enabled: false
