--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
-appVersion: "0.0.1"
+appVersion: "0.1.0"
 description: A Helm chart for reumanager
 name: reumanager
-version: 0.0.1
+version: 0.1.0
 dependencies:
 
 
 
   - name: postgresql
-    version: 8.1.2
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    version: 10.3.18
+    repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
 
