--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,36 @@
 ---
+AllCops:
+  EnabledByDefault: true
+
 # Style
 Style/FrozenStringLiteralComment:
   Enabled: false
 Style/Documentation:
   Enabled: false
+Style/DocumentationMethod:
+  Enabled: false
 Style/RedundantSelf:
+  Enabled: false
+Style/Copyright:
+  Enabled: false
+Style/StringHashKeys:
+  Enabled: false
+Style/MethodCallWithArgsParentheses:
+  IgnoredMethods:
+    - require
+    - describe
+    - to
+    - to_not
+    - not_to
+    - include
+    - puts
+    - redirect_to
+    - redirect_back
+    - render
+    - raise
+    - send_data
+    - text
+Style/MissingElse:
   Enabled: false
 
 # Layout
@@ -23,4 +49,10 @@ Metrics/ClassLength:
 Metrics/MethodLength:
   Enabled: false
 Metrics/BlockLength:
+  Enabled: false
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+#lint
+Lint/ConstantResolution:
   Enabled: false
