change env names from database to postgres

--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ APP_NAME=reumanager
 CORS_ENABLED=true
 DATABASE_ADAPTER=postgresql
 DATABASE_HOST=postgres
-DATABASE_NAME=reumanager
-DATABASE_PASSWORD=DatabaseFTW
-DATABASE_USER=postgres
+POSTRGRES_DB=reumanager
+POSTGRES_PASSWORD=DatabaseFTW
+POSTGRES_USER=postgres
 PASSENGER_APP_ENV=development
 REGISTRY_HOST=registry.gitlab.com
 REGISTRY_URI=/notch8/reumanager/v3
