--- a/config/database.yml
+++ b/config/database.yml
@@ -3,9 +3,9 @@
 login: &login
   adapter: <%= ENV['DATABASE_ADAPTER'] %>
   host: <%= ENV['DATABASE_HOST'] %>
-  username: <%= ENV['DATABASE_USER'] %>
-  password: <%= ENV['DATABASE_PASSWORD'] %>
-  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  database: <%= ENV['POSTGRES_DB'] %>
   pool: 5
   timeout: 5000
 
